# MassGen

./:  BUG_REPORT  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN_DOC  GROK_STREAMING_FIX.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  LICENSE  LOGGING.md  MANIFEST.in  README.md  STREAMING_FIX.md  TERMINATION_FIX.md  USAGE_EXAMPLES.md  available_options.txt  cases.md  cli.py  display_example.txt  example_config.json  function_calls.txt  function_outputs.txt  gemini_input.txt  gemini_streaming.txt  grok_input.txt  grok_streaming.txt  grok_streaming_debug.txt  main.py  mass_agent.py  mass_agents.py  mass_coordination.py  mass_logging.py  mass_main.py  mass_orchestration.py  mass_streaming_display.py  mass_workflow.py  openai_input.txt  openai_streaming.txt  (+9 more)
_scratch_/: README.md  RECENT_IMPROVEMENTS.md
_scratch_/examples/: two_agent_real_api.py
_scratch_/mass/: __init__.py  agent_config.py  chat_agent.py  input_cases_reference.md  message_templates.py  orchestrator.py
_scratch_/mass/backends/: Function calling openai responses.md  OPENAI_RESPONSES_API_FORMAT.md  base.py  chat_completions_backend.py  grok_backend.py  openai_backend.py
_scratch_/mass/frontend/: __init__.py  coordination_ui.py
_scratch_/mass/frontend/displays/: __init__.py  base_display.py  simple_display.py  terminal_display.py
_scratch_/mass/frontend/logging/: __init__.py  realtime_logger.py
agents/: constants.py  gemini.py  grok.py  mock_tools.py  oai.py  util.py
docs/case_studies/: collaborative_creative_writing.md  diverse_ai_news.md  grok_hle_cost.md  imo_2025_winner.md  index.md  stockholm_travel_guide.md
examples/: fast_config.yaml  my_config.yaml  no_streaming.yaml  production.yaml  single_agent.yaml
future_mass/: README.md  input_cases_reference.md
future_mass/backends/: base.py  chat_completions_backend.py  grok_backend.py  openai_backend.py
future_mass/examples/: custom_agent_templates.py  flexible_tools_demo.py  mock_backend_demo.py  serialization_demo.py  summary_demo.py  trace_demo.py
future_mass/mass/: __init__.py  agent.py  agent_config.py  message_templates.py  orchestrator.py  summary_manager.py
future_mass/mass/backends/: __init__.py  anthropic_backend.py  base.py  factory.py  grok_backend.py  mock_backend.py  openai_backend.py
future_mass/mass/utils/: __init__.py  api_tracer.py
future_mass/tests/: __init__.py
hle/: category_sample_subset_raw_subject.json  category_sample_subset_raw_subject_10each.json  category_sample_subset_raw_subject_50each.json  check_dataset.py  dataset_field_names.txt  dataset_image_statistics.txt  field_values_analysis.txt  test_case copy.json  test_case.json  test_case.txt  test_case_matched_items.json  test_case_search_results.txt  test_case_type1.json  test_case_type1_wrong.json  test_case_type1_wrong2.json
hle/hle_eval/: run_model_predictions.py
mass/: __init__.py  agent.py  agents.py  config.py  logging.py  main.py  orchestration.py  orchestrator.py  streaming_display.py  tools.py  types.py  utils.py  workflow.py
mass/backends/: .env.example  constants.py  gemini.py  grok.py  mock_tools.py  oai.py  tools.py  util.py
massgen/: __init__.py  agent.py  config.py  logging.py  main.py  orchestrator.py  streaming_display.py  types.py  utils.py
massgen/backends/: .env.example  gemini.py  grok.py  oai.py
